[tool.poetry]
name = "nuudel-best-time-finder"
version = "0.0.0"
description = ""
authors = ["Philip Hackstock <p.hackstock@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nuudel_best_time_finder"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
requests = "^2.30.0"
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"

[tool.poetry.scripts]
nuudel-find-best-times = "nuudel_best_time_finder:app"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
bump = true

[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
